按视频和照片区分的同时按类型区分如aikissing则跳转到aikissing的详情页，里面的effects根据工具页的工具去获取而不再是硬编码。同时补充了没有从文件中获取到的效果图。

--- a/src/config/locale/messages/en/landing.json
+++ b/src/config/locale/messages/en/landing.json
@@ -55,7 +55,7 @@
                 {
                   "title": "View More",
                   "description": "Explore all video effects",
-                  "url": "/video-effects",
+                  "url": "/tools?type=video",
                   "icon": "ArrowRight"
                 }
               ]
@@ -98,7 +98,7 @@
                 {
                   "title": "View More",
                   "description": "Explore all photo effects",
-                  "url": "/photo-effects",
+                  "url": "/tools?type=photo",
                   "icon": "ArrowRight"
                 }
               ]
